--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,10 +13,10 @@
     <section class="hero is-primary">
         <div class="hero-body">
           <p class="title">
-            Club de los tontos
+            Aplicacion de web scraping
           </p>
           <p class="subtitle">
-            Entra solo si eres tonto
+            
           </p>
         </div>
     </section>
