--- a/templates/tripadvisorweb.html
+++ b/templates/tripadvisorweb.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" type= "text/css" href="{{ url_for('static', filename='styles/main.css') }}">
     <title>Here is your database</title>
 </head>
 <br>
 <body>
-    <table >
+    <table>
         <tr>
             {% for header in headers %}
             <th>{{header}}</th>
