--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -9,14 +9,16 @@ body, html {
     width: 400px;
 }
 
-table, td, th {
-    border: 1px solid #aaa;
-}
 
-table {
+table, th, td {
+    border: 1px solid rgb(0, 0, 0);
     border-collapse: collapse;
-    width: 100%;
-}
+  }
+  th, td {
+    background-color: #c7f9b6;
+  }
+
+
 
 th {
     height: 30px;
