--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,7 +20,7 @@
     </section>
     <br>
     <br>
-    <div class="buttons">
+    <div  class="box has-text-centered">
         <a class="button is-success" href="{{ url_for('tripadvisor')}}">Tripadvisor</a>
         
       </div>
