added Procfile and requirements.txt

--- a/templates/tripadvisor.html
+++ b/templates/tripadvisor.html
@@ -24,7 +24,7 @@
           <form class= "form" method="POST"  action=""></form>
             <label class="label">What do you want to scrape?</label>
             <div class="control">
-              <input name = "style" class="input" type="text" placeholder="Whatever you wnat to search in TripAdvisor">
+              <input name = "style" class="input" type="text" placeholder="Whatever you want to search in TripAdvisor">
               
             </div>
             <p class="help">(e.g. Restaurante Italiano , Hoteles en la Costa Brava...)</p>
