--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -23,11 +23,12 @@
     <br>
     <br>
     <h1></h1>
-    <div class="buttons">
-        <a class="button" href="{{ url_for('login')}}">Login</a>
-        <a class="button is-primary" href="{{ url_for('register')}}">Register</a>
-      </div>
-      
+    <div class="box has-text-centered">
+       <div class="buttons">
+          <a class="button" href="{{ url_for('login')}}">Login</a>
+          <a class="button is-primary" href="{{ url_for('register')}}">Register</a>
+       </div>
+    </div>
     
 </body>
 </html>
