--- a/templates/tripadvisor.html
+++ b/templates/tripadvisor.html
@@ -14,8 +14,8 @@
             Tripadvisor
           </p>
           <p class="subtitle">
-            You need to have install Google Chrome
-             and too be in Spain or use a VPN.
+            You need to have installed Google Chrome
+             and to be located in Spain or use a VPN.
           </p>
         </div>
       </section>
