--- a/templates/tripadvisor.html
+++ b/templates/tripadvisor.html
@@ -15,7 +15,7 @@
           </p>
           <p class="subtitle">
             You need to have installed Google Chrome
-             and to be located in Spain or use a VPN.
+             and to be located in Spain or use a VPN. When you click SUBMIT wait until the table is released, this can take up to 5 minutes.
           </p>
         </div>
       </section>
